[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
readme = "README.md"
name = "blue-pill"
version = "0.1.0"

[dependencies]
cast = { version = "0.2.2", default-features = false }
cortex-m = { version = "0.5.8", features = ["inline-asm"] }
cortex-m-rt = "0.6.7"
cortex-m-rtfm = "0.4.0"
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.2"
enc28j60 = { git = "https://github.com/japaric/enc28j60", branch = "wip" }
heapless = "0.4.1"
jnet = { path = ".." }
panic-abort = "0.3.1"
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.1", features = ["inline-asm"] }
stlog = { git = "https://github.com/japaric/stlog", features = ["spanned"] }
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", features = ["rt"], rev = "c9d9a86bcb4c493c72b6c5a805e2dd838e2e907f" }
# owning-slice = { git = "https://github.com/japaric/owning-slice" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
incremental = false
lto = true # better optimizations