[package]
name = "mrf24j40"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

[dependencies]
as-slice = "0.1.0"
owning-slice = { git = "https://github.com/japaric/owning-slice" }

[dependencies.byteorder]
default-features = false
version = "1.3.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"