[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
readme = "README.md"
name = "panic-never"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.7"
jnet = { path = ".." }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
incremental = false
lto = true # better optimizations